# img_inference_sync

./: .gitignore  CMakeLists.txt  package.xml
msg/: Node.msg  node.msg
src/: KTAI_run_ros_v0.2.py  KTAI_run_ros_v0.3.py
